styles.css
@font-face {
	font-family: 'pollos';
	src: url("font/pollos.ttf");
  }

body{
	margin:0;
	padding:0;
}


#content{
	display: flex;
	flex-direction: column;
	
}



#head{
	background-color:#050400;
	text-align: center;
}

#head>img{
	width:fit-content;
	height:fit-content;
	display: block;
  	margin-left: auto;
  	margin-right: auto;
	
}

#head>button{
	background:none;
	border:none;
	font-family: "pollos";
	font-size: 2em;
	color:white;
	cursor:pointer;
	outline: none;
}

.red{
	color: #bf2227;

}
 
 .head>button:hover{
	text-decoration:underline;
} 


#body{
	flex:1;
	background-color: #0281cf;
}

.imageContainer{
	position:relative;
	margin:auto;
	margin-top: 30px;
	margin-bottom: 30px;
	width: 700px;
	border: 0.5rem solid;
}
.frontImage{
	width:100%;
	height:100%;
}

.overlay{
	background:rgba(255, 255, 255, 0.8);
    position:absolute;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    opacity: 0;
    -webkit-transition: opacity 0.5s;
    transition: opacity 0.5s;
	
}

.textOverlay{
	position:absolute;
	font-family: 'pollos';
	font-size: 5em;
	color: #bf2227;
	bottom:0;
	text-align: center;
}

.imageContainer:hover>.overlay{
	opacity: 1;		
}

#bodyMenuImages{
	flex:1;
	
	display:grid;
	grid-template-columns: repeat(2, 1fr);
	justify-items: center;
	
	background-color: #0281cf;
	
}

.menuImageContainer{
	position:relative;
	margin-top: 40px;
	margin-bottom: 40px;
	border: 0.5rem solid;
	width: 500px;
	height: 400px;
}

.menuImages{
	width:100%;
	height:100%;
}

.menuImageContainer:hover>.overlay{
	opacity: 1;		
}

.contactImageContainer{
	position:relative;
	margin:auto;
	margin-top: 30px;
	margin-bottom: 30px;
	width: 1000px;
	border: 0.5rem solid;
}


.contactImageContainer:hover>.overlay{
	opacity: 1;		
}


.bottom{
	background-color:#050400;
	
}


.bottom>p{
	font-family: "pollos";
	text-align: center;
	color: #bf2227;
	font-size: 3em;
}

